lug.yaml updates

--- a/lug.yaml
+++ b/lug.yaml
@@ -1,8 +1,9 @@
 Title: "JavaScript Crash Course"
 Description: >
-    A Crash Course on JavaScript
+    A Crash Course on JavaScript by Sumner and Sam
 Date: 2016-11-10
 Thumbnail: js.jpg
 Files:
         SlidesPDF: js-crash-course.pdf
         LaTeX: js-crash-course.tex
+        Samples: resources.md
