Revert "Trying to see if redirect on HTML works from LUG website"
This reverts commit 2e52b66d77ce773e3540dd9c43f96d4ffce06453.

--- a/lug.yaml
+++ b/lug.yaml
@@ -6,4 +6,4 @@ Thumbnail: js.jpg
 Files:
         SlidesPDF: js-crash-course.pdf
         LaTeX: js-crash-course.tex
-        Samples: samples.html
+        Samples: resources.md
