--- a/lug.yaml
+++ b/lug.yaml
@@ -2,7 +2,7 @@ Title: "JavaScript Crash Course"
 Description: >
     A Crash Course on JavaScript by Sumner and Sam
 Date: 2016-11-10
-Thumbnail: js.jpg
+Thumbnail: graphics/js.jpg
 Files:
         SlidesPDF: js-crash-course.pdf
         LaTeX: js-crash-course.tex
